--- a/ExiledGame.uproject
+++ b/ExiledGame.uproject
@@ -7,7 +7,11 @@
 		{
 			"Name": "ExiledGame",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"CoreUObject",
+				"Engine"
+			]
 		}
 	]
 }
