Added and setup working dialog system that includs multithreading.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=6C14C21D4F2640247C66E78821E7A0A0
 ProjectName=Top Down Game Template
+CopyrightNotice=@Maxpro 2017
 
 [/Script/ExiledGame.ExiledGameCharacter]
 FixedCameraPitch=-45.0
